TEST_PROGRAMS/VALID_TYPECHECK/type_cast.go
package main;

func main (){

    var x int = 5;
    var y float64 = float64(x);

}
