TEST_PROGRAMS/INVALID/04/101.go
package main

func main() {
    var x = 2

    // Illegal expression in statement context
    switch x > 2 ; { }


}
